# demo

design_patterns/strategy_model/strategy_model/: strategy_model.sln
design_patterns/strategy_model/strategy_model/strategy_model/: strategy_model.cpp  strategy_model.vcxproj  strategy_model.vcxproj.filters
linux/cmake_project_demo/: CMakeLists.txt
linux/cmake_project_demo/main/: CMakeLists.txt  main.cpp
linux/cmake_project_demo/math/: CMakeLists.txt  add.cpp  add.h
linux/cmake_project_demo/test_binary/: demo
linux/cmake_project_demo/utility/: CMakeLists.txt  utils.cpp  utils.h
python/read_linux_proc/: pid.py
windows/getCmdRet/: getCmdRet.sln
windows/getCmdRet/getCmdRet/: getCmdRet.cpp  getCmdRet.vcxproj  getCmdRet.vcxproj.filters
